# urepl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/my_repl/: main.py
